@@ -1,0 +1,50 @@
+[interface]
+classification = sequence / assembly
+
+[parameters]
+$;SPEC_FILE$; = /dev/null
+
+[input]
+$;INPUT_FILE_LIST$; =
+$;INPUT_FILE$; = 
+$;INPUT_DIRECTORY$; =
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = frg
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;STAGING_ROOT$;/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;SCF_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.scf.fasta.list
+$;QC_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.qc.list
+
+[component]
+$;COMPONENT_NAME$; = celera_assembler_cloud
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$; = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATORQSUB$; = qsub
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+$;ITERATORQSUB_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATORQSUB$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; = 
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$; = 
+
+
